@@ -9,6 +9,11 @@ PROMPT Adding multiple Xref tables
 PROMPT
 @add_multiple_xref_tables.sql
 
+PROMPT *********************************************************************************/
+PROMPT Creating synonims and Grants
+PROMPT
+@create_synonims_and_grants.sql
+
 UPDATE ia_db_info
 set value = '1.2.2'
 where UPPER(dbi_key) ='SCHEMA_VERSION';
