@@ -7,3 +7,5 @@ and constraints are enabled for the parent_ac field.
 
 TECHNICAL CHANGES
     * Added 6 new tables, with the same structure than IA_Xref: IA_BioSourceXref, IA_ExperimentXref, IA_ControlledVocabXref, IA_FeatureXref, IA_InteractorXref, IA_PublicationXref
+    * Created synonims for those tables
+    * Granted the correct permissions
